# fogverse

./: .gitignore  Dockerfile  README.md  __init__.py  base.py  benchmark-cluster-config.yaml  client.py  comparison_results_20250520_180944.json  comparison_results_20250520_203113.json  comparison_results_20250521_112911.json  consumer_producer.py  default-cluster-config.yaml  docker-compose.yml  download-kafka.sh  download_kafka.sh  generate_compose.py  jolokia-wrapper.sh  log4j.properties  payload.txt  perf_results_20250519_141405.json  perf_results_20250520_084952.json  pyproject.toml  pyrightconfig.json  requirements.txt  runnable.py  scraper.py  setup-topic.sh  setup.py  setup_topic.sh
constants/: __init__.py
consumer/: __init__.py  base.py  kafka.py  open_cv.py
experiments/: .env  Dockerfile  benchmark_to_cluster_yaml.py  cluster-config.yaml  comparison_test.py  constants.py  docker-compose.yml  generate_compose.py  jolokia-wrapper.sh  keda-consumer.py  latency.py  open_file_handles.py  replication_latency.py  run.py  throughput.py  unavailability_time.py  visualize.py
fogverse/: __init__.py  constants.py  runnable.py
fogverse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fogverse_logging/: __init__.py  handler.py
logs/: log_file_032a42b2-882f-4005-8266-39a148a33b61.txt  log_file_4d0167e5-c6b6-422f-aff6-c811c542cbc7.txt  log_file_86fb8706-7595-4f9b-bf4d-a6b078f8190c.txt  log_file_91959d8c-8d2b-47b0-b7ed-be65ae90d0b9.txt  log_file_d0d1523d-0dcb-4ec5-9422-237f54f0aecf.txt  log_file_fa28eff1-b199-4869-ba0d-3b61a847a89b.txt
manager/: __init__.py
(+187 files in other folders)
