[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fogverse"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.21.5",
    "aiokafka==0.7.2",
    "opencv-python-headless",
]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["."]
